Aporte em COTAS INTEIRAS pelo preço atual, com a unidade informada
O que mudou
- O valor sugerido passa a respeitar o PREÇO ATUAL do ativo: ação, FII e ETF são
  comprados em cotas inteiras (ninguém compra 72,7 cotas). Cripto, renda fixa e
  Tesouro aceitam fração, então neles o valor fica como está e a quantidade vira
  informação (8 casas). Sem preço conhecido, não há unidade para contar e o valor
  não é arredondado.
- A SOBRA do arredondamento é redistribuída POR ORDEM DE NOTA: o ativo melhor
  avaliado que ainda tem espaço leva as cotas que couberem, e o que não fecha uma
  cota fica em não alocado ("troco", com a explicação na tela).
- O item do ranking ganhou `preco_unitario` e `quantidade`, e o motivo já diz o
  que fazer: "Compre 72 cotas a R$ 30,00 = R$ 2.160,00. Nota 90,0%...".
  Tabela e legenda da rosca mostram "72 cotas × R$ 30,00".
- O percentual ATUAL do item também passou a ser projetado para o patrimônio
  depois do aporte (6.000 em 37.500 = 16%), para não contradizer o déficit, que já
  era calculado no total novo. Item sem meta própria mostra "—" na coluna Ideal
  (o alvo dele é o da subclasse/classe).
- Saíram os restos da tolerância no dinheiro: a capacidade da subclasse também é
  déficit puro, e os textos deixaram de dizer "déficit + tolerância".
- A nota no motivo era formatada como dinheiro ("R$ 90,00%"); agora é "90,0%".

Validado em runtime (patrimônio R$ 27.500 + aporte R$ 10.000)
- BBAS3: 16,00% → 21,82% · teto R$ 2.181,83 → 72 cotas × R$ 30,00 = R$ 2.160,00
- TAEE3: 54 cotas × R$ 40,00 = R$ 2.160,00
- IVVB11: 10 cotas × R$ 350,00 = R$ 3.500,00
- MXRF11: 109 cotas × R$ 10,00 = R$ 1.090,00
- Caixa PICPAY e Tesouro Selic (sem preço unitário): valor cheio, sem cota
- Alocado R$ 9.637,28 · troco R$ 362,72 (não fecha cota de quem ainda tem espaço)